--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <canvas id="myCanvas" width="480" height="320"></canvas>
+    <button id="runButton">Start game</button>
 
     <script>
         const canvas = document.getElementById("myCanvas");
@@ -27,9 +28,11 @@
         let dx = 2;
         let dy = -2;
 
+        const ballRadius = 10;
+
         function drawBall() {
             ctx.beginPath();
-            ctx.arc(x, y, 10, 0, Math.PI * 2);
+            ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
             ctx.fillStyle = "#0095DD";
             ctx.fill();
             ctx.closePath();
@@ -40,9 +43,24 @@
             drawBall();
             x += dx;
             y += dy;
-        }
-        setInterval(draw, 10);
 
+            if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
+                dx = -dx;
+            }
+
+            if (y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
+                dy = -dy;
+            }
+        }
+
+        function startGame(){
+            setInterval(draw, 10);
+        }
+        
+        document.getElementById("runButton").addEventListener("click", function () {
+            startGame();
+            this.disabled = true;
+        });
 
     </script>
   </body>
