--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         let rightPressed = false;
         let leftPressed = false;
 
+        let interval = 0;
+
         function drawBall() {
             ctx.beginPath();
             ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
@@ -63,8 +65,18 @@
                 dx = -dx;
             }
 
-            if (y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
+            if (y + dy < ballRadius) {
                 dy = -dy;
+            }
+            else if (y + dy > canvas.height - ballRadius) {
+                if (x > paddleX && x < paddleX + paddleWidth) {
+                    dy = -dy;
+                }
+                else {
+                    alert("GAME OVER");
+                    document.location.reload();
+                    clearInterval(interval);
+                }
             }
 
             if(rightPressed) {
@@ -96,7 +108,7 @@
             }
         }
 
-        setInterval(draw, 10);
+        interval = setInterval(draw, 10);
 
         // function startGame(){
         //     setInterval(draw, 10);
